<resources>
    <string name="app_name">LocationSamples</string>

    <string name="action_settings">Settings</string>

    <string name="location">Location</string>
    <string name="activity_recognition">Activity Recognition</string>
    <string name="geofencing">Geofencing</string>

    <string name="title_activity_activity_recognition">ActivityRecognitionActivity</string>
    <string name="title_activity_geofencing">GeofencingActivity</string>
    <string name="title_activity_location_data">LocationDataActivity</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="city">City</string>
    <string name="country">Country</string>

    <string name="no_location_found">No location found</string>

    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown</string>
    <string name="walking">Walking</string>
    <string name="format_activity_name_and_change">%1$s - %2$d</string>

    <string name="activity_detection_started">Activity Detection Started</string>

    <string name="geofence_title">Geofence Zone</string>
    <string name="geofence_entered">Entered Geofence Zone</string>
    <string name="geofence_exited">Exited Geofence Zone</string>
    <string name="geofence_notification_title">Geofence Notification</string>
    <string name="geofence_notification_text">%1$s: %1$s</string>

</resources>
