<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    tools:context="com.asadmshah.locationsamples.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    
    <Button android:id="@+id/button_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="@style/ActivityMainButtons"/>

    <Button android:id="@+id/button_activity_recognition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_recognition"
        style="@style/ActivityMainButtons"/>

    <Button android:id="@+id/button_geofencing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofencing"
        style="@style/ActivityMainButtons"/>

</LinearLayout>
